--- a/src/styles/a_general.css
+++ b/src/styles/a_general.css
@@ -2,8 +2,8 @@
 /* * { outline: 1px solid #e6e3db; } */
 
 :root {
-  --color1: rgb(169, 169, 169); 
-  --color2: rgb(88, 88, 88); 
+  --color1: rgb(169, 169, 169);
+  --color2: rgb(88, 88, 88);
   --color3: #11113D;
   --black: #11113D;
   --link: #cb1b5f;
@@ -45,7 +45,7 @@ body {
   width: 50em;
   margin: 0 auto;
   font-size: 0.9em;
-} 
+}
 
 @media only screen and (max-width: 768px) {
   body {
@@ -82,7 +82,8 @@ a[href^="mailto:"]::before {
   align-items: center;
 }
 
-.line::before, .line::after {
+.line::before,
+.line::after {
   content: '';
   margin-inline: 2vmin;
   flex-grow: 1;
