--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -22,7 +22,7 @@ import social3 from '@images/github.png';
         {projectEntries.map(entry => 
             <div class="list-item">
                 <div class="year">
-                    <p class="secondary">{entry.data.release}</p>
+                    <p class="secondary">{entry.data.release.getUTCFullYear()}</p>
                 </div>
                 <div class="list-info">
                     
