--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,52 +1,52 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 // const projects = await Astro.glob('@content/projects/**/*.md')
-const projectEntries = await getCollection('projects');
-projectEntries.sort((a, b) => Date.parse(b.data.release) - Date.parse(a.data.release));
-
-// placeholders
-import { Image } from 'astro:assets';
-import social1 from '@images/linkedin.png';
-import social2 from '@images/behance.png';
-import social3 from '@images/github.png';
+const projectEntries = await getCollection("projects");
+// projectEntries.sort((a, b) => Date.parse(b.data.release) - Date.parse(a.data.release)); // TODO
 ---
 
 <style>
-    @import '@styles/projects.css';
+    @import "@styles/projects.css";
 </style>
 
-<div id="projects">
-    <h2 class="wg-lighter">Projects</h1>
-    <p class="secondary">At the moment, I'm still working on write-ups of my past projects which I will be releasing gradually.</p>
+<div>
+    <h2 class="wg-lighter">Projects</h2>
+    <p class="secondary">
+        At the moment, I'm still working on write-ups of my past projects which
+        I will be releasing gradually.
+    </p>
     <div>
-        {projectEntries.map(entry => 
-            <div class="list-item">
-                <div class="year">
-                    <p class="secondary">{entry.data.release.getUTCFullYear()}</p>
-                </div>
-                <div class="list-info">
-                    
-                    <h3><a href={`/projects/${entry.slug}`}>{entry.data.title}</a></h3>
-                    
-                    <p class="secondary">{entry.data.summary}</p>
+        {
+            projectEntries.map(
+                (entry) => (
+                    <div class="list-item">
+                        <div id="year">
+                            <p class="secondary">
+                                {entry.data.release.getUTCFullYear()}
+                            </p>
+                        </div>
+                        <div class="list-info">
+                            <h3 class="margin-none">
+                                <a href={`/projects/${entry.slug}`}>
+                                    {entry.data.title}
+                                </a>
+                            </h3>
 
-                    <div id="techs">
-                        {
-                            
-                            entry.data.techs.map(tech => 
-                                <p class="tertiary">{tech}</p>
-                            )
-                    }
-                    </div>  
-                        
-                </div>
-                
-            </div>
-            // <project.Content />
-        )}
+                            <p class="secondary">{entry.data.summary}</p>
+
+                            <div id="techs">
+                                {entry.data.techs.map((tech) => (
+                                    <p class="tertiary">{tech}</p>
+                                ))}
+                            </div>
+                        </div>
+                    </div>
+                ),
+                // <project.Content />
+            )
+        }
     </div>
 </div>
-
 
 <!-- <div id="roles">
     {entry.data.roles.map(role => 
