--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,35 @@
 ---
-import Layout from '@layouts/Layout.astro';
-import Profile from '@components/Profile.astro'
-import '@styles/index.css';
-import Projects from '@components/Projects.astro';
+import Layout from "@layouts/Layout.astro";
+import Profile from "@components/Profile.astro";
+import Projects from "@components/Projects.astro";
 ---
 
-<Layout title="Francis Tayag">	
-	<Profile />
-	<div id="about">
-		<h2 class="wg-lighter">About Me</h1>
-		<p class="secondary">
-			Hi, I'm <b>Francis</b> or just <b>Franz</b>! I'm a frontend web developer who is passionate about 
-			creating top-notch user experiences through clean and elegant designs. 
-			I mainly use <b>AstroJS</b> and <b>React</b> for developing static and dynamic websites, respectively. For general purposes, I use <b>Python</b>. 
-		</p>
-		<p class="secondary">
-			Aside from web development, I also develop cool and fun games over on 
-			<a class="wg-bolder external" href="https://zyenapz.itch.io/" target="_blank" rel="noopener noreferrer">itch.io</a>
-		</p>
-		<!-- <h2 class="wg-lighter secondary">Education</h2> -->
+<Layout title="Francis Tayag">
+	<div class="fadeIn">
+		<Profile />
+
+		<div>
+			<h2 class="wg-lighter txt-left">About Me</h2>
+			<p class="secondary">
+				Hi, I'm <b>Francis</b> or just <b>Franz</b>! I'm a frontend web
+				developer who is passionate about creating top-notch user
+				experiences through clean and elegant designs. I mainly use <b
+					>AstroJS</b
+				> and <b>React</b> for developing static and dynamic websites, respectively.
+				For general purposes, I use <b>Python</b>.
+			</p>
+			<p class="secondary">
+				Aside from web development, I also develop cool and fun games
+				over on
+				<a
+					class="external"
+					href="https://zyenapz.itch.io/"
+					target="_blank"
+					rel="noopener noreferrer">itch.io</a
+				>
+			</p>
+		</div>
+
+		<Projects />
 	</div>
-	<Projects />
 </Layout>
