--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -117,23 +117,45 @@
 
 #hamburger {
     display: none;
-    border: 1px solid var(--color1);
-}
-
-.toggled {
-    background-color: green;
-}
-
-.untoggled {
-    background-color: red;
-}
-
-input[type=checkbox] {
-    opacity: 0;
+    position: relative;
     cursor: pointer;
-    border: 1px solid black;
-    width: 3em;
-    height: 3em;
-    display: inline-block;
-    margin: 0;
+    width: 35px;
+    height: 35px;
+    
+    transform: rotate(0deg);
+    transition: all .5s ease-in-out;
+}
+
+#hamburger div {
+    position: absolute;
+    height: 10px;
+    width: 100%;
+    background-color: var(--link);
+    left: 0px;
+
+    transition: all .25s ease;
+}
+
+.hamburger div:nth-child(1) {
+    top: 0px;
+}
+
+.hamburger div:nth-child(2) {
+    top: 15px;  
+}
+
+.hamburger div:nth-child(3) {
+    top: 30px;
+}
+
+.hamburger.open div:nth-child(1) {
+    top: 15px;
+    transform: rotate(135deg);
+}
+.hamburger.open div:nth-child(2) {
+    display: none;
+}
+.hamburger.open div:nth-child(3) {
+    top: 15px;
+    transform: rotate(-135deg);
 }
