Fixed navbar being overlapped by other elements

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,11 +1,12 @@
 ---
+import Navbar from "@components/Navbar.astro";
 import Socials from "@components/Socials.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Contact">
-    <div class="fadeIn contact txt-center">
-        <h1 class="line">Contact</h1>
+    <div class="fadeIn txt-center">
+        <h1>Contact</h1>
         <h2 class="wg-lighter">E-mail</h2>
         <p class="secondary">
             Got any inquiries? Please send them to <a
