--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -41,9 +41,9 @@
     </div>
     <div class="container">
         <div id="responsive" class="hide">
-            <!-- <a href="/">Home</a>
+            <a href="/">Home</a>
             <a href="/">About</a>
-            <a href="/projects">Projects</a> -->
+            <a href="/projects">Projects</a>
             <a href="/contact">Contact</a>
         </div>
     </div>
