--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -50,7 +50,7 @@ const { Content } = await entry.render();
               target="_blank"
               rel="noopener noreferrer"
             >
-              <Image src={github} alt="GitHub" />
+              <Image class="icon" src={github} alt="GitHub" />
             </a>
           )
         }
@@ -62,7 +62,7 @@ const { Content } = await entry.render();
               target="_blank"
               rel="noopener noreferrer"
             >
-              <Image src={itch} alt="Itch.io" />
+              <Image class="icon" src={itch} alt="Itch.io" />
             </a>
           )
         }
