--- a/src/styles/a_general.css
+++ b/src/styles/a_general.css
@@ -120,7 +120,6 @@ p {
   text-align: center;
 }
 
-
 .icons {
   display: flex;
   justify-content: center;
@@ -132,7 +131,7 @@ p {
 .icons a {
   display: inline;
   float: left;
-  margin-inline: 5px;
+  margin-inline: 0.75em;
 }
 .icons a:hover {
   opacity: 50%;
