Temporary profile picture

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import profilePicture from "@images/placeholder-1.png";
+import profilePicture from "@images/pfp.png";
 import Socials from "./Socials.astro";
 ---
 
