Changed website colors, revised about me

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import profilePicture from "@images/pfp.png";
+import profilePicture from "@images/header.png";
 import Socials from "./Socials.astro";
 ---
 
@@ -11,9 +11,9 @@ import Socials from "./Socials.astro";
 <div id="profile">
     <Image src={profilePicture} alt="Profile Picture" />
     <div class="txt-center margin-v-s">
-        <h1 class="margin-none line larger">Francis Tayag</h1>
+        <h1 class="margin-none larger">Francis Tayag</h1>
         <h2 class="subtitle secondary">
-            Frontend Developer &#x25cf; UX Designer
+            Frontend Web Developer
         </h2>
     </div>
     <Socials />
