--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,29 +4,17 @@ import Profile from "@components/Profile.astro";
 import Projects from "@components/Projects.astro";
 ---
 
-<Layout title="Francis Tayag">
+<Layout title="Home">
 	<div class="fadeIn">
 		<Profile />
 
 		<div>
 			<h2 class="wg-lighter txt-left">About Me</h2>
 			<p class="secondary">
-				Hi, I'm <b>Francis</b> or just <b>Franz</b>! I'm a frontend web
-				developer who is passionate about creating top-notch user
-				experiences through clean and elegant designs. I mainly use <b
-					>AstroJS</b
-				> and <b>React</b> for developing static and dynamic websites, respectively.
-				For general purposes, I use <b>Python</b>.
+				Hi, I'm <b>Francis</b> or just <b>Franz</b>! I'm a fresh Computer Science graduate who is eager to pursue a career as a <b>Frontend Web Developer</b> in a growth-oriented company where I can leverage my skills and learn from mentors and teammates.
 			</p>
 			<p class="secondary">
-				Aside from web development, I also develop cool and fun games
-				over on
-				<a
-					class="external"
-					href="https://zyenapz.itch.io/"
-					target="_blank"
-					rel="noopener noreferrer">itch.io</a
-				>
+				Experienced in developing applications using <b>Django</b>, <b>Flutter</b>, and <b>Python</b> in general. Currently studying <b>ReactJS</b>.
 			</p>
 		</div>
 
