Updated github link

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -16,7 +16,7 @@ import twitter from "@images/twitter.png";
         <Image src={linkedIn} alt="Linked In" />
     </a>
     <a
-        href="https://github.com/zyenapz"
+        href="https://github.com/fmtayag"
         target="_blank"
         rel="noopener noreferrer"
     >
